# pizza_demo

./: CMakeLists.txt  README.md  package.xml  pizza-ninja.asd
config/: controlled_joints.yaml  pizza_demo_visualization.rviz  sim_config.yaml
html/: ros3d.js  viz_pizza_demo.html  viz_pizza_demo_loop.html
launch/: pizza_demo_pr2_gazebo.launch  pizza_demo_visualization.launch  start_gazebo.launch
logs/: Readme.txt
logs/exp-2016-09-02_15-23-56/: perform-cut-2016-09-02--15:36:27.dot  perform-cut-2016-09-02--15:36:27.owl  perform-cut-2016-09-02--15:41:23.dot  perform-cut-2016-09-02--15:41:23.owl  perform-cut-2016-09-02--15:48:04.dot  perform-cut-2016-09-02--15:48:04.owl  perform-cut-2016-09-02--15:52:44.dot  perform-cut-2016-09-02--15:58:20.dot
logs/exp-2016-09-04_13-16-50/: perform-cut-2016-09-04--13:24:36.dot  perform-cut-2016-09-04--13:24:36.owl  perform-cut-2016-09-04--13:28:54.dot  perform-cut-2016-09-04--13:28:54.owl
models/altered_pr2/: gripper.urdf.xacro  pr2.urdf.xacro  upload_pr2.launch
models/bread/: bread-1_2.sdf  bread-1_3.sdf  bread-1_4.sdf  bread.sdf  bread.urdf  model.config
models/knife/: knife.sdf  (+5 more)
prolog/: init.pl  pizza_demo.pl
scripts/: fibonacci.sh  gz2Tf.py  start_cram.sh  test_cancel_ROS.py  test_cancel_sim.py  test_cut_pizza_ROS.py  test_prac2cram_RPC.py  test_prac2cram_RPC_cut_3_pizza_slices.py  test_prac2cram_RPC_cut_4_bread_slices.py  test_prac2cram_RPC_cut_4_pizza_slices.py  test_prac2cram_SIM_cut_4_bread_slices.py  test_sample_request.py
src/: demo.lisp  markers.lisp  pizza-ninja.lisp
worlds/: empty_world_with_plugins.world
(+25 files in other folders)
