<?xml version="1.0"?>
<package>
  <name>pizza_demo</name>
  <version>0.0.1</version>
  <description>
    
    Pizza cutting demo code: plan a cut and perform it, including supporting actions
    
  </description>
  
  <maintainer email="blandc@cs.uni-bremen.de">Mihai Pomarlan</maintainer>
  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>robot_state_chain_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>attache_msgs</run_depend>
</package>
